--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -160,15 +160,14 @@ dt {
 
 
 #header {
-  z-index: 100;
+  z-index: 10;
   left:0;
   top: 0px;
-  height: 60px;
-  width: 100%;
+  height: 6px;
+  width: 10%;
   position: fixed;
-  background: linear-gradient(to right, #b0091a, #4b0208);
-  border-bottom: 4px solid #434343;
-  box-shadow: 0px 1px 3px rgba(0,0,0,.25);
+  background: url(../images/nav-bg.gif) #353535;
+  border-bottom: 1px solid #434343;
 
   nav {
     max-width: 650px;
