--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <p>{{ site.description | default: github.project_tagline }}</p>
           <hr>
           <span class="credits left">Maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Do you need ai assistant ? &mdash; <a href="https://grok.com/">I'm Grok</a></span>
+          <span class="credits right">Google ai studio is here &mdash; <a href="https://aistudio.google.com/prompts/new_chat">your welcome.</a></span>
         </div>
 
         {{ content }}
